テストデプロイ

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
+    <!-- Google Tag Manager -->
+    <script>
+      (function(w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-KJWR3MQ");
+    </script>
+    <!-- End Google Tag Manager -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="robots" content="noindex" />
 
     <meta
       property="og:title"
@@ -17,11 +32,15 @@
     <meta property="og:url" content="https://eats.codeforshinjuku.org" />
     <meta
       property="og:image"
-      content="https://eats.codeforshinjuku.org/images/ogp_image.png"
+      content="https://eats.codeforshinjuku.org/images/ogp_img.png"
     />
-    <meta property="fb:app_id" content="2846776525441105" />
+    <meta property="fb:app_id" content="599253910934667" />
 
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="https://eats.codeforshinjuku.org/favicon.ico"
+    />
     <meta
       name="description"
       content="SHINJUKU EATS(新宿イーツ)は、新宿区内のテイクアウト＆デリバリー情報サイトです。新宿・大久保、高田馬場・早稲田、落合、四谷・市ヶ谷、神楽坂対応。掲載店募集中。"
@@ -39,5 +58,15 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-KJWR3MQ"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
